plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Spring Security Resource Server
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    // Spring Security Core
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Jwt handling
    implementation 'com.auth0:java-jwt:4.5.0'
    // AWS S3 SDK
    implementation 'software.amazon.awssdk:s3'
    implementation platform('software.amazon.awssdk:bom:2.20.27')
    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    // Mock
    testImplementation 'org.mockito:mockito-core'
    // Memory Cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Thymeleaf - HTML 템플릿 엔진
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.1.22'
    // Prometheus & Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    // Spring Retry
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'
}

tasks.named('test') {
    useJUnitPlatform()
}
